emu_tests/src/launch_5.stderr
error: expected 32-bit floating point number
  --> $DIR/launch_5.rs:11:22
   |
11 |         data[i] = data[i + 0];
   |                            ^

error: unsupported expression
  --> $DIR/launch_5.rs:13:13
   |
13 |         data[i] = data[i] as f32;
   |                   ^^^^^^^^^^^^^^

error: unsupported item
  --> $DIR/launch_5.rs:14:3
   |
14 |           if true {
   |  _________^
15 | |             data[i] = data[i];
16 | |         }
   | |_________^

error: expected 32-bit floating point number
  --> $DIR/launch_5.rs:17:13
   |
17 |         data[i] = true;
   |                   ^^^^

error: unsupported item
  --> $DIR/launch_5.rs:18:3
   |
18 |         let x = data[i];
   |         ^^^^^^^^^^^^^^^^

error: unsupported item
  --> $DIR/launch_5.rs:19:3
   |
19 |           fn foo () {
   |  _________^
20 | |
21 | |         }
   | |_________^

error[E0308]: mismatched types
  --> $DIR/launch_5.rs:12:23
   |
12 |         data[i] = data[i] + 0.0f64;
   |                             ^^^^^^ expected `f32`, found `f64`

error[E0277]: cannot add `f64` to `f32`
  --> $DIR/launch_5.rs:12:21
   |
12 |         data[i] = data[i] + 0.0f64;
   |                           ^ no implementation for `f32 + f64`
   |
   = help: the trait `std::ops::Add<f64>` is not implemented for `f32`

error[E0308]: mismatched types
  --> $DIR/launch_5.rs:17:13
   |
17 |         data[i] = true;
   |                   ^^^^ expected `f32`, found `bool`
